# ebv-theta-to-mqtt

./: .gitignore  69_EBV.pm  README.md  interesting_values.yaml  justdump.py  mqtt_client.py  parse.py  protocol_parse.py  pyproject.toml  read_dump_serve.py  theta.service.example  thetaheizung.txt
reverse-engineering-notes/: meme.xcf  thetaheizung.txt
